[gd_scene load_steps=2 format=3 uid="uid://sg4ukpxwletd"]

[ext_resource type="Script" path="res://scripts/levels_and_score.gd" id="1_jancf"]

[node name="levels_and_score" type="CanvasLayer"]
script = ExtResource("1_jancf")

[node name="levels" type="Node2D" parent="."]
position = Vector2(245, 328)

[node name="level_1" type="Button" parent="levels"]
offset_left = 23.0
offset_top = -11.0
offset_right = 85.0
offset_bottom = 20.0
text = "Level 1"

[node name="level_2" type="Button" parent="levels"]
offset_left = 27.0
offset_top = 46.0
offset_right = 89.0
offset_bottom = 77.0
text = "Level 2"

[node name="score" type="Node2D" parent="."]
position = Vector2(271, 455)

[node name="score" type="Label" parent="score"]
offset_left = 32.0
offset_top = -10.0
offset_right = 88.0
offset_bottom = 13.0
text = "Score : "

[node name="score_number" type="Label" parent="score"]
offset_left = 99.0
offset_top = -10.0
offset_right = 139.0
offset_bottom = 13.0
text = "0"

[connection signal="pressed" from="levels/level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="levels/level_2" to="." method="_on_level_2_pressed"]
